<resources>
    <string name="app_name">Menofia City</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="khleel">
تُعد مصر من أهم وأجمل البلاد سياحيًا، ولذلك وضعت على قائمة أفضل الوجهات بالنسبة للسائح.
‎وتقدم "البوابة لايت"، فقرة "اعرف بلدك"، التي تتابع فيها عرض أفضل الأماكن في مصر وفي كل محافظة لتشجيع السياحة الداخلية والخارجية.
محافظة المنوفية:
محافظة المنُوفيّة، محافظة مصرية، تقع شمال العاصمة المصرية القاهرة في جنوب دلتا النيل، وعاصمتها هي مدينة شبين الكوم، وأكبر مدنها مدينة السادات المستقطعة من محافظة البحيرة عام 1991 (منذ 27 سنة) بلغ عدد سكانها حسب الإحصاء الرسمي 3،270،404 عام 2006، ومساحتها 2،543.03 كم². وينحصر حوالي نصف مساحة المحافظة فيما بين فرعي نهر النيل دمياط ورشيد، بينما النصف الآخر يمتد كظهير صحراوي غرب فرع رشيد ليضم مركز السادات أكبر مراكز المحافظة.
تاريخ المنوفية:
في العصر الفرعوني كانت تسمى أراضي دلتا النيل الجنوبية باسم نيت شمع، أي نيت الجنوبية، وكانت عاصمتها "برزقع" الواقعة مكان قرية زاوية رزين الحالية بمركز منوف. وفي العصر الروماني تم تقسيمها إلى وحدتين إداريتين؛ الأولى باسم كونيو وتقع بمنطقة جزيرة قويسنا ما بين فرع دمياط وبحر شبين، والثانية باسم طوا التي ضمت باقي أراضي المنوفية شرق فرع رشيد.
وقد ظهر اسم المنوفية الحالي نسبةً إلى مدينة منوف الحالية، التي كانت قرية فرعونية قديمة معروفة باسم "بير نوب"، الذي يعني "بيت الذهب"، واسم منوف أشتق من اسمها القديم من نفر بالمصرية القديمة وبانوفيس باللغة القبطية وأونوفيس بالرومية (باللاتينية: Onouphis)، والذي تحوّر إلى مانوفيس بعد الفتح الإسلامي لمصر، وتعني "الأرض الطيبة"، ولسهولة النطق أصبح يُطلق عليها من نوفي، ومع الوقت أصبحت مِنوف.
وتتمتع محافظة المنوفية بالجو الرائع والنسيم العليل والمناظر الخلابة التي تأسر الزائرين والناظرين وتتميز من ضمن ما تتميز به بجودة وخصوبة الاراضى الزراعية وتنوع الغلال والمحاصيل والفواكة والأزهار والشتلات والأشجار.
مساجد:
مسجد العباسي: بنى في عهد الخديوي عباس وجدد عدة مرات أخرها عام 2000 ويقع بجوار مستشفي الهلال بمدينة شبين الكوم
مسجد سيدي خميس: أمام محطة السكك الحديدية الرئيسية بمدينة شبين الكوم، وهو معلم أثر إسلامي هام.
مسجد سيدي شبل الأسود: ويضم المسجد ضريح سيدي شبل بن الفضل بن العباسي ابن عم الرسول صلى الله عليه وسلم.كما يضم بعض شهد
إهداء الفتح الاسلامى، ويعد مزارا دينيا هاما يرتاده الصوفية من جميع أنحاء العالم والمهتمين بالآثار الإسلامية ويقع بمركز الشهداء.
مسجد العمرى:يقع فوق تل قديم بوسط مدينة أشمون على مساحة 862م2 وبنى في العصر الايوبى وتم ترميمية على نفقة المجلس الأعلى للآثار وأصبح مزارا سياحيا.
القصور الأثرية:
قصر خليل الجزار: بشبين الكوم وهو المقر الرئيسي للجامعة حاليا.
قصر عبدالعزيز باشا فهمي: بكفر المصيلحه.
مدرسة شبين الكوم الثانوية بنات: بشارع المنتزه.
المناطق الأثرية:
تل البندارية: ويقع في قرية (زاوية بمم) على مساحة 26030م2وزاول نشاطة في العصر الروماني.
وهو عبارة عن مجموعة من التلال المتصلة يطلق عليها مجازا (تل البندارية) ومساحته حوالي 25 فدانا و17 قيراطا تقريبا ومرتفع عن سطح الأرض بشكل متدرج بما يقرب من (10) أمتار. وتم التعدي من قبل المزارعين المجاورين للتل على مساحة 6 أفدنة و11 قيراطا والتل يتبع هيئة الآثار المصرية (قطاع الآثار الإسلامية والقبطية) منذ 1975 وبدأ التنقيب فيه 1976 بمعرفة هيئة الآثار بمنطقة وسط الدلتا. وتؤكد الشواهد والأدلة المادية التي بدأت تتبلور عام بعد عام آخر أنها منطقة استيطان كاملة المرافق في أواخر العصر الروماني وطوال العصر القبطي حيث تم اكتشاف بقايا صوامع غلال مدفونة ولكنها بحالة سيئة وكذلك وجود اختلاف في لون التربة في بعض الأجزاء إلى لون الحمرة مما يدل على وجود أفران لحرق الفخار.
ويعتقد أن هذه المنطقة كانت بلدة قبطية عامرة ويتمثل هذا في بقايا المباني والكنيسة الموجودة بالطوب اللبن. كما أن المنطقة تشتمل على مقابر قديمة منذ أوائل الفتح الإسلامي وتشبه إلى حد كبير المقابر القديمة التي وجدت بمنطقة الشهداء ومحلة منوف. وقد تم استخراج أكثر من (10) آلاف قطعة أثرية من الفخار القبطي والآبار والأبنية ومجموعة من العملات الرومانية والإسلامية بخلاف الأحجار الكريمة والقطع الذهبية. وهذا نتاج الحفر في (3) مناطق فقط من التل ولم يتم الحفر بعد في المنطقة الشرقية التي يعتقد أنها أكثر غنى بالآثار من المنطقة الغربية.
وقد قامت الوحدة المحلية بمد المرافق من الكهرباء ومياه وإنارة للموقع وتمهيد للطريق المؤدي للتل. كما تم وضع المنطقة في الخطة الخمسية لإنشاء متحف أثري يعرض فيه كافة الآثار التي تم العثور عليها ليكون مزارا سياحيا. الأمر الذي يستدعي نشر ثقافة الوعي السياحي بين طلاب المدارس
والجبانة الأثرية بكفور الرمل: توجد بجوار منطقة المحاجر بقويسنا المنشئة في التسعينات من القرن الماضي وتحتوى على آثار مصرية ويونانية قديمة ولا زالت تحت البحث والحفريات لاكتشاف المزيد من كنوزها الأثرية وهى تقع على ربوة عالية.
منطقة التل الأثرى: بكفر أبو الحسن.
- منطقة الناوس غرب ضريح أم حرب بقرية مصطاى.
تل سرسنا:يتبع هيئة الآثار ومساحته 2000م2 وجارى أعمال الحفر والتنقيب عن الآثار ويرجع تاريخها إلى الحكم الروماني.
منطقة التل الإغريقى:
بقرية الفرعونية وآثار باقية لتل قديم يرجع إلى العهد بين اليوناني والروماني.
أماكن سياحية وترفهية مهمة:
برج المنوفية السياحي: أقامته المحافظة عام 1961 على أطراف مدينة قويسنا لخدمة السائحين والزائرين والوافدين. ويقع على مساحة فدانين، وبه عدة مطاعم وكافيتريات ويتكون من طابقين، ويتميز بتقديم الوجبات المميزة والتي تحوز على إعجاب المترددين ويبلغ عدد العاملين به قرابة 100 موظف وعامل وطباخ وبعضهم من الدائمين ويضم حديقة وصالة للمناسبات والأفراح.</string>
    <string-array name="userRole">
        <item>Admin</item>
        <item>Typical</item>
    </string-array>

    <string-array name="Category">
        <item>Hospitals</item>
        <item>Hotels</item>
        <item>Government</item>
        <item>Tourists</item>
    </string-array>


    <string name="bndr">يقع في قرية (زاوية بمم) على مساحة 26030م2وزاول نشاطة في العصر الروماني.

وهو عبارة عن مجموعة من التلال المتصلة يطلق عليها مجازا (تل البندارية) ومساحته حوالي 25 فدان و17 قيراط تقريبا ومرتفع عن سطح الأرض بشكل متدرج بما يقرب من (10) أمتار. وتم التعدي من قبل المزارعين المجاورين للتل على مساحة 6فدان و11 قيراط والتل يتبع هيئة الآثار المصرية (قطاع الآثار الإسلامية والقبطية) منذ 1975 وبدأ التنقيب فيه 1976 بمعرفة هيئة الآثار بمنطقة وسط الدلتا. وتؤكد الشواهد والأدلة المادية التي بدأت تتبلور عام بعد عام آخر أنها منطقة استيطان كاملة المرافق في أواخر العصر الروماني وطوال العصر القبطي حيث تم اكتشاف بقايا صوامع غلال مدفونة ولكنها بحالة سيئة وكذلك وجود اختلاف في لون التربة في بعض الأجزاء إلى لون الحمرة مما يدل على وجود أفران لحرق الفخار.

ويعتقد أن هذه المنطقة كانت بلدة قبطية عامرة ويتمثل هذا في بقايا المباني والكنيسة الموجودة بالطوب اللبن. كما أن المنطقة تشتمل على مقابر قديمة منذ أوائل الفتح الإسلامي وتشبه إلى حد كبير المقابر القديمة التي وجدت بمنطقة الشهداء ومحلة منوف. وقد تم استخراج أكثر من (10) آلاف قطعة أثرية من الفخار القبطي والآبار والأبنية ومجموعة من العملات الرومانية والإسلامية بخلاف الأحجار الكريمة والقطع الذهبية. وهذا نتاج الحفر في (3) مناطق فقط من التل ولم يتم الحفر بعد في المنطقة الشرقية التي يعتقد أنها أكثر غنى بالآثار من المنطقة الغربية. </string>

    <string name="qasr"> أقامته المحافظة عام 1961 على أطراف مدينة قويسنا لخدمة السائحين والزائرين والوافدين. ويقع على مساحة فدانين ؛ وبه عدة مطاعم وكافيتريات ؛ ويتكون من طابقين ،  ويتميز بتقديم الوجبات المميزة والتي تحوز على أعجاب . المترددين ويبلغ عدد العاملين به قرابة 100موظف وعامل وطباخ وبعضهم من الدائمين ويضم حديقة وصالة للمناسبات والأفراح.</string>
    <string name="europe">
بيانات الاتصال: المستشفى الاوروبى
العنوان: برج ابو يوسف -, امام معهد الكبد, شبين الكوم, المنوفية
شبين الكوم, المنوفية
أرقام الهاتف: 0482222166 - 01069220099
الفاكس : 048-2327885
</string>


    <string name="delta">
بيانات الاتصال: مركز الدلتا التخصصى
العنوان: ش احمد ماهر تقاطع ش الامين - برج المهندسين, امام ستوديو منير, شبين الكوم, المنوفية
شبين الكوم - , المنوفية
أرقام الهاتف: 0482237788
</string>
    <string name="gam3a">
بيانات الاتصال: مستشفى جامعة المنوفية
العنوان: ش ياسين عبد الغفار متفرع من ش جمال عبد الناصر, بجوار معهد الكبد القومى - جامعة المنوفية, شبين الكوم, المنوفية
شبين الكوم, المنوفية
أرقام الهاتف: 0482233462 - 0482228304 - 0482228305 - 0482228306
الفاكس : 048-2233521, 048-2228302
</string>
    <string name="m3had">
بيانات الاتصال: معهد الكبد القومى - جامعة المنوفية
العنوان: ش جمال عبد الناصر, داخل جامعة المنوفية, شبين الكوم, المنوفية
شبين الكوم, المنوفية
أرقام الهاتف: 0482222740 - 0482234585 - 0482222743
الفاكس : 048-2224586, 048-2221729
</string>
    <string name="panorama">يقع Panorama Tanta في تانتا، ويوفر هذا الفندق ذو الـ 4 نجوم مكتب استقبال يعمل على مدار الساعة وخدمة الواي فاي المجانية. يمكن للضيوف تناول الطعام في المطعم الموجود في الموقع</string>
    <string name="highWay">يقع High way Hotel في تانتا، ويضم كازينو وحديقة وخدمة الواي فاي المجانية. ويضم مكان الإقامة هذا مكتب استقبال يعمل على مدار الساعة، كما يوفر للضيوف تراسًا. يوفر مكان الإقامة صالة مشتركة</string>
    <string name="rual">يقع Rural Guest House في تانتا ويضم حديقة وتراس، وتتوفر خدمة الواي فاي المجانية تحت تصرف الضيوف.

وتحتوي بعض الغرف على مطبخ مزود بفرن وثلاجة وموقد مسطح،

ويبعد مطار القاهرة الدولي مسافة 107 كم من مكان الإقامة. </string>

    <string name="edara">جامعة المنوفية هي إحدى الجامعات الإقليمية في مصر أنشئت عام 1976 من أجل تقديم خدمات التعليم الجامعي في مصر. وتتسم الجامعة بسرعة الإنشاء وشهرتها الواسعة. ولقد بدأت الجامعة بأربع كليات هي ثم اتسعت وأنشأت العديد من الكليات التابعة لها حتى صارت تضم حوالي 9560 طالبا وطالبة و 214 عضو هيئة تدريس و 372 هيئة معاونة.</string>

    <string name="s7ya">مديرية الشئون الصحية بالمنوفية من مديريات الخدمات التي تتبع محافظة المنوفية وقد صدر قرار بإنشائها من محافظة المنوفية رقم 153 لسنة 1980 ومقرها الحالي شبين الكوم– البر الشرقي – شارع سعد زغلول  رقم التليفون- 2262831   والإدارات التي تتبع المديرية هي إدارة شبين الكوم الطبية – إدارة منوف الطبية – إدارة اشمون الطبية – إدارة تلا الطبية – إدارة قويسنا الطبية – إدارة بركة السبع الطبية – إدارة الشهداء – إدارة السادات – إدارة سرس الليان – إدارة الباجور </string>
    <string name="zra3a">تعتبر مديرية الزراعة إحدى المديريات التابعة لوزارة الزراعة وتم إنشاؤها عام 1939 على مساحة نحو خمسة أفدنة ويقع مقر ديوان مديرية الزراعة بالمنوفية بموقع متميز بالبر الشرقي على ضفاف بحر شبين الكوم بشارع / محمد فريد</string>
    <string name="m7kma">محكمه شبين الكوم بالمنوفيه</string>
    <string name="locationID">0</string>

    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont">DON`T HAVE ACCOUNT ?</string>
    <string name="doo">DO YOU HAVE ACCOUNT ?</string>
    <string name="register">SIGN UP</string>
    <string name="fullName">FULL NAME</string>
    <string name="mob">MOBILE</string>
    <string name="repeat">REPEAT PASSWORD</string>
    <string name="admin">ADMIN</string>
    <string name="tourist">Tourism</string>
    <string name="hospitals">Hospitals</string>
    <string name="hotels">Hotels</string>
    <string name="gov">Government</string>
    <string name="all">All Categories</string>
    <string name="places">Places</string>
    <string name="update">Update Profile</string>
    <string name="add">Add Item</string>
    <string name="edit">Edit Item</string>
    <string name="remove">Remove Item</string>
    <string name="logout">Logout</string>
    <string name="viewItem">View Item</string>
    <string name="details">Details</string>
    <string name="confirmupdate">Update</string>
    <string name="confirmdelete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="imgPath">Image Path</string>
    <string name="category">Category</string>
    <string name="id">ID</string>
    <string name="desc">Description</string>
    <string name="lat">خط الطول</string>
    <string name="lag">خط العرض</string>
    <!--<style name=""></style>-->
    <!--<style name=""></style>-->
</resources>
