<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/places">
        <menu>
            <item android:id="@+id/navAll"
                android:icon="@drawable/all_icon"
                android:title="@string/all"/>
            <item
                android:id="@+id/navHospitals"
                android:icon="@drawable/hos_icon"
                android:title="@string/hospitals" />
            <item
                android:id="@+id/navHotels"
                android:icon="@drawable/hotel_icon"
                android:title="@string/hotels" />
            <item
                android:id="@+id/navGovernment"
                android:icon="@drawable/gov_icon"
                android:title="@string/gov" />
            <item
                android:id="@+id/navTourist"
                android:icon="@drawable/tourism_icon"
                android:title="@string/tourist" />
        </menu>

    </item>

</menu>
