<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.EditItemActivity">

    <EditText
        android:hint="Place ID"
        android:id="@+id/editID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="number"
        android:visibility="gone"/>

    <EditText
        android:hint="Address"
        android:id="@+id/editAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:visibility="gone"
        android:text="Address"/>

    <EditText
        android:id="@+id/editPlaceName"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:maxLines="1"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCategory"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:id="@+id/editLagtitude"
        android:hint="@string/lag"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:id="@+id/editLatitude"
        android:hint="@string/lat"/>



    <EditText
        android:id="@+id/editDescription"
        android:hint="@string/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:id="@+id/editImagePath"
        android:hint="@string/imgPath"
        android:textColor="@color/Blue"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmupdate"
        android:layout_gravity="center"
        android:id="@+id/submitEdit"
        android:textAllCaps="false"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/btn_green"
        android:textColor="@color/white"/>
</LinearLayout>
