<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:id="@+id/emailText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/mailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/emailText"/>

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@+id/mailLogin"/>

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_below="@+id/textPassword"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/adminCheckBoxLogin"
        android:layout_below="@+id/passwordLogin"/>


    <Button
        android:layout_below="@+id/adminCheckBoxLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"
        android:layout_gravity="center"
        android:paddingRight="70dp"
        android:paddingLeft="70dp"
        android:background="@drawable/btn_green"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_above="@+id/signupLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont"
        android:textSize="13sp"
        android:textColor="@color/Blue"
        android:layout_gravity="center"
        android:id="@+id/newAcc"
        android:onClick="goToSignUp"
        android:layout_centerHorizontal="true"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progressLogin"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/signupLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:onClick="goToSignUp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/register"
        android:background="@drawable/btn_green"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>